--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
   <main>
     <section class="section" id="home">
       <div class="halfText">
-        <p class="text">Olá! Eu sou</p>
+        <p class="textContent">Olá! Eu sou</p>
         <p class="name">Aurélio Soares,</p>
-        <p class="text">desenvolvedor Front-End.</p>
-        <p class="text">Conheça um pouco sobre mim</p>
-        <p class="text">e meu trabalho.</p>
+        <p class="textContent">desenvolvedor Front-End.</p>
+        <p class="textContent">Conheça um pouco sobre mim</p>
+        <p class="textContent">e meu trabalho.</p>
       </div>
       
       <div class="halfImages">
@@ -50,15 +50,56 @@
     </section>
 
     <section class="section scroll">
-      <p class="text">Scroll</p>
+      <p class="textContent">Scroll</p>
       <div class="verticalLine"></div>
     </section>
 
 
-    <section class="section" id="about"></section>
-    <p>Sobre mim</p>
+    <section class="section" id="about">
+      <p>Sobre mim</p>
+
+
+        <!-- Slideshow container -->
+      <div class="slideshow-container">
+
+        <!-- Full-width images with number and caption text -->
+        <div class="mySlides fade">
+          <div class="numbertext">1 / 3</div>
+          <img src="./img/aurelio.jpg" style="width:100%">
+          <div class="text">Caption Text</div>
+        </div>
+
+        <div class="mySlides fade">
+          <div class="numbertext">2 / 3</div>
+          <img src="./img/aurelio.jpg" style="width:100%">
+          <div class="text">Caption Two</div>
+        </div>
+
+        <div class="mySlides fade">
+          <div class="numbertext">3 / 3</div>
+          <img src="./img/aurelio.jpg" style="width:100%">
+          <div class="text">Caption Three</div>
+        </div>
+
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <br>
+
+      <!-- The dots/circles -->
+      <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+      </div>
+
+    </section>
     <section class="section" id="projects"></section>
     <section class="section" id="contact"></section>
   </main>
+
+
+  <script src="./js/main.js"></script>
 </body>
 </html>
