--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   </header>  
 
   <main>
-    <section class="section" id="home">
-      <div class="halfText">
+    <section class="zone" id="home">
+      <div class="halfLeft">
         <p class="textContent">Olá! Eu sou</p>
         <p class="name">Aurélio Soares,</p>
         <p class="textContent">desenvolvedor Front-End.</p>
@@ -42,61 +42,91 @@
         <p class="textContent">e meu trabalho.</p>
       </div>
       
-      <div class="halfImages">
+      <div class="halfRight">
        <img class="language" src="./img/html-svgrepo-com.svg">
        <img class="language" src="./img/css-3-svgrepo-com.svg">
        <img class="language" src="./img/javascript-svgrepo-com.svg">
       </div>
     </section>
 
-    <section class="section scroll">
+    <section class="zone scroll">
       <p class="textContent">Scroll</p>
       <div class="verticalLine"></div>
     </section>
 
 
-    <section class="section" id="about">
-      <p>Sobre mim</p>
-
-
-        <!-- Slideshow container -->
-      <div class="slideshow-container">
-
-        <!-- Full-width images with number and caption text -->
-        <div class="mySlides fade">
-          <div class="numbertext">1 / 3</div>
-          <img src="./img/aurelio.jpg" style="width:100%">
-          <div class="text">Caption Text</div>
-        </div>
-
-        <div class="mySlides fade">
-          <div class="numbertext">2 / 3</div>
-          <img src="./img/aurelio.jpg" style="width:100%">
-          <div class="text">Caption Two</div>
-        </div>
-
-        <div class="mySlides fade">
-          <div class="numbertext">3 / 3</div>
-          <img src="./img/aurelio.jpg" style="width:100%">
-          <div class="text">Caption Three</div>
-        </div>
-
-        <!-- Next and previous buttons -->
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    <section class="zone" id="about">
+      <h1 class="title">Sobre mim</h1>
+      <div class="halfLeft">
+        <img src="./img/aurelio.jpg" class="photo">
       </div>
-      <br>
-
-      <!-- The dots/circles -->
-      <div style="text-align:center">
-        <span class="dot" onclick="currentSlide(1)"></span>
-        <span class="dot" onclick="currentSlide(2)"></span>
-        <span class="dot" onclick="currentSlide(3)"></span>
+      <div class="halfRight paragraphs">
+        <p class="textContent">
+          Olá! Meu nome é Aurélio Soares e eu sou um desenvolvedor font-end.
+          Comecei meus estudos na área em 2021 e no ano seguinte abdiquei de
+          outros trabalhos para me dedicar exclusivamente à nova carreira.
+        </p>
+        <p class="textContent">
+          Sou graduado em Matemática (licenciatura) e tenho mais de 10 anos
+          de experiência como professor. Já dei aula para Ensino Fundamental,
+          Médio, cursos preparatórios para concursos e pré-vestibulares.
+        </p>
+        <p class="textContent">
+          Acredito no trabalho colaborativo, no compartilhamento de conhecimento
+           e no respeito pela diversidade.
+        </p>
+        <p class="textContent">
+          Resido em Santa Teresa (ES) com minha esposa e meus dois filhos.
+        </p>
       </div>
-
+      <a href="assets/curriculo_aurelio.pdf" target="_blank" download class="download">Baixar curriculum</a>
     </section>
-    <section class="section" id="projects"></section>
-    <section class="section" id="contact"></section>
+    <section class="zone" id="projects"></section>
+      <h1 class="title">Meus projetos</h1>
+      <div class="grid">
+        <a class="cell cellImg" id="img1" href="https://aurelio-sc.github.io/Tip-Calculator-App/" target="_blank"></a>
+
+        <div class="cell cellText" id="text1">
+          <p class="textContent projectName">Calculadora para dividir a conta no bar ou restaurante.</p>
+          <br>       
+          <p class="textContent">Existem porcentagens fixas, mas você também pode inserir a que quiser.</p>
+          <br>
+          <p class="textContent">Todos os cálculos são feitos de forma dinâmica, assim que os valores são preenchidos.</p>            
+        </div>
+
+        <a class="cell cellImg" id="img2" href="https://aurelio-sc.github.io/Interactive-Pricing-Component/" target="_blank"></a>
+
+        <div class="cell cellText" id="text2">
+          <p class="textContent projectName">Slider seletor de preço.</p>
+          <br>
+          <p class="textContent">Os valores são apresentados na tela dinamicamente, assim que se solta o slider.</p>
+          <br>
+          <p class="textContent">Também há uma opção de acionar desconto, por meio de um botão toggle.</p>          
+        </div>
+
+        <a class="cell cellImg" id="img3" href="https://aurelio-sc.github.io/Intro-Component-With-Sign-Up-From-Master/" target="_blank"></a>
+
+        <div class="cell cellText" id="text3">
+          <p class="textContent projectName">Verificador de preenchimento de formulário.</p>
+          <br>
+          <p class="textContent">Mensagem customizada em caso de formulário não preenchido corretamente.</p>
+          <br>
+          <p class="textContent">Adiciona uma imagem no campo que ainda precisa ser preenchido.</p>         
+        </div>
+
+        <a class="cell cellImg" id="img4" href="https://aurelio-sc.github.io/launch-countdown-timer/" target="_blank"></a>
+
+        <div class="cell cellText" id="text4">
+          <p class="textContent projectName">Contador regressivo.</p>
+          <br>
+          <p class="textContent">Atualizado a cada segundo.</p>
+          <br>
+          <p class="textContent">Já pode encomendar o presente: o contador termina no meu aniversário!</p>          
+        </div>
+
+
+      </div>
+    <section class="zone" id="contact"></section>
   </main>
 
 
