"Contact" section and minor updates

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <header>
 
-    <nav class="container">
+    <nav>
       <div class="menu">
         <ul class="menuItems">
           <li class="menuItems_item"><a href="#home">Início</a></li>
@@ -81,7 +81,7 @@
       </div>
       <a href="assets/curriculo_aurelio.pdf" target="_blank" download class="download">Baixar curriculum</a>
     </section>
-    <section class="zone" id="projects"></section>
+    <section class="zone" id="projects">
       <h1 class="title">Meus projetos</h1>
       <div class="grid">
         <a class="cell cellImg" id="img1" href="https://aurelio-sc.github.io/Tip-Calculator-App/" target="_blank"></a>
@@ -126,9 +126,17 @@
 
 
       </div>
-    <section class="zone" id="contact"></section>
+    </section>
+    <section class="zone" id="contact">
+      <h1 class="title">Fale comigo</h1>
+      <p class="textContent">Escreva para mim e me diga como posso lhe ajudar.</p>
+      <a class="download mail" href="mailto:asc.mat@gmail.com">&#9993;</a>
+    </section>    
   </main>
 
+  <footer class="zone">
+
+  </footer>
 
   <script src="./js/main.js"></script>
 </body>
