--- a/index.html
+++ b/index.html
@@ -134,8 +134,12 @@
     </section>    
   </main>
 
-  <footer class="zone">
-
+  <footer class="zone footer">
+    <p class="textContent createdBy">Construído por Aurélio Soares</p>
+    <div class="social">
+      <a href="https://github.com/aurelio-sc" target="_blank" class="download socialIcon"><img src="./img/icons8-github.svg"></a>
+      <a href="https://www.linkedin.com/in/aurelio-soares/" target="_blank" class="download socialIcon"><img src="./img/icons8-linkedin.svg"></a>
+    </div>
   </footer>
 
   <script src="./js/main.js"></script>
