--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
   <footer class="zone footer">
     <p class="textContent createdBy">Construído por Aurélio Soares</p>
     <div class="social">
-      <a href="https://github.com/aurelio-sc" target="_blank" class="download socialIcon"><img src="./img/icons8-github.svg"></a>
-      <a href="https://www.linkedin.com/in/aurelio-soares/" target="_blank" class="download socialIcon"><img src="./img/icons8-linkedin.svg"></a>
+      <a href="https://github.com/aurelio-sc" target="_blank" class="download socialIcon"><img src="./img/icons8-github.svg" class="iconColor"></a>
+      <a href="https://www.linkedin.com/in/aurelio-soares/" target="_blank" class="download socialIcon"><img src="./img/icons8-linkedin.svg" class="iconColor"></a>
     </div>
   </footer>
 
