--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <nav>
       <div class="menu">
         <ul class="menuItems">
-          <li class="menuItems_item"><a href="#home">Início</a></li>
-          <li class="menuItems_item"><a href="#about">Sobre</a></li>
-          <li class="menuItems_item"><a href="#projects">Projetos</a></li>
-          <li class="menuItems_item"><a href="#contact">Contato</a></li>
+          <li class="menuItems_item"><a href="#home" class="menuLink">Início</a></li>
+          <li class="menuItems_item"><a href="#about" class="menuLink">Sobre</a></li>
+          <li class="menuItems_item"><a href="#projects" class="menuLink">Projetos</a></li>
+          <li class="menuItems_item"><a href="#contact" class="menuLink">Contato</a></li>
         </ul>
       </div>
     </nav>
@@ -84,40 +84,48 @@
     <section class="zone" id="projects">
       <h1 class="title">Meus projetos</h1>
       <div class="grid">
-        <a class="cell cellImg" id="img1" href="https://aurelio-sc.github.io/Tip-Calculator-App/" target="_blank"></a>
+        <div id="imgHolder1" class="cellImg">
+          <a href="https://aurelio-sc.github.io/Tip-Calculator-App/" target="_blank"  class="imgLink"><img src="./img/tipCalculator.png" class="img"></a>
+        </div>
 
         <div class="cell cellText" id="text1">
-          <p class="textContent projectName">Calculadora para dividir a conta no bar ou restaurante.</p>
+          <a href="https://aurelio-sc.github.io/Tip-Calculator-App/" target="_blank"><p class="textContent projectName">Calculadora para dividir a conta no bar ou restaurante.</p><a>
           <br>       
           <p class="textContent">Existem porcentagens fixas, mas você também pode inserir a que quiser.</p>
           <br>
           <p class="textContent">Todos os cálculos são feitos de forma dinâmica, assim que os valores são preenchidos.</p>            
         </div>
 
-        <a class="cell cellImg" id="img2" href="https://aurelio-sc.github.io/Interactive-Pricing-Component/" target="_blank"></a>
+        <div id="imgHolder2" class="cellImg">
+          <a href="https://aurelio-sc.github.io/Interactive-Pricing-Component/" target="_blank"  class="imgLink"><img src="./img/interactivePricingComponent.png" class="img"></a>
+        </div>
 
         <div class="cell cellText" id="text2">
-          <p class="textContent projectName">Slider seletor de preço.</p>
+          <a href="https://aurelio-sc.github.io/Intro-Component-With-Sign-Up-From-Master/" target="_blank"><p class="textContent projectName">Slider seletor de preço.</p></a>
           <br>
           <p class="textContent">Os valores são apresentados na tela dinamicamente, assim que se solta o slider.</p>
           <br>
           <p class="textContent">Também há uma opção de acionar desconto, por meio de um botão toggle.</p>          
         </div>
 
-        <a class="cell cellImg" id="img3" href="https://aurelio-sc.github.io/Intro-Component-With-Sign-Up-From-Master/" target="_blank"></a>
+        <div id="imgHolder3" class="cellImg">
+          <a href="https://aurelio-sc.github.io/Intro-Component-With-Sign-Up-From-Master/" target="_blank"  class="imgLink"><img src="./img/introComponent.png" class="img"></a>
+        </div>
 
         <div class="cell cellText" id="text3">
-          <p class="textContent projectName">Verificador de preenchimento de formulário.</p>
+          <a href="https://aurelio-sc.github.io/Intro-Component-With-Sign-Up-From-Master/" target="_blank"><p class="textContent projectName">Verificador de preenchimento de formulário.</p></a>
           <br>
           <p class="textContent">Mensagem customizada em caso de formulário não preenchido corretamente.</p>
           <br>
           <p class="textContent">Adiciona uma imagem no campo que ainda precisa ser preenchido.</p>         
         </div>
 
-        <a class="cell cellImg" id="img4" href="https://aurelio-sc.github.io/launch-countdown-timer/" target="_blank"></a>
+        <div id="imgHolder4" class="cellImg">
+          <a href="https://aurelio-sc.github.io/launch-countdown-timer/" target="_blank"  class="imgLink"><img src="./img/launchCountdownTimer.png" class="img"></a>
+        </div>
 
         <div class="cell cellText" id="text4">
-          <p class="textContent projectName">Contador regressivo.</p>
+          <a href="https://aurelio-sc.github.io/launch-countdown-timer/" target="_blank"><p class="textContent projectName">Contador regressivo.</p></a>
           <br>
           <p class="textContent">Atualizado a cada segundo.</p>
           <br>
