--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Roboto+Mono:wght@300;400&display=swap" rel="stylesheet">
-</head>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Open+Sans:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
 
 <body>
 
@@ -50,7 +49,7 @@
     </section>
 
     <section class="zone scroll">
-      <p class="textContent">Scroll</p>
+      <p class="textContent" id="scroll">Scroll</p>
       <div class="verticalLine"></div>
     </section>
 
