--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
           outros trabalhos para me dedicar exclusivamente à nova carreira.
         </p>
         <p class="textContent">
+          Desenvolvo aplicações responsivas utilizando HTML, CSS e JavaScript.
+        </p>
+        <p class="textContent">
           Sou graduado em Matemática (licenciatura) e tenho mais de 10 anos
           de experiência como professor. Já dei aula para Ensino Fundamental,
           Médio, cursos preparatórios para concursos e pré-vestibulares.
@@ -88,11 +91,13 @@
         </div>
 
         <div class="cell cellText" id="text1">
-          <a href="https://aurelio-sc.github.io/Tip-Calculator-App/" target="_blank"><p class="textContent projectName">Calculadora para dividir a conta no bar ou restaurante.</p><a>
+          <a href="https://aurelio-sc.github.io/Tip-Calculator-App/" target="_blank"><p class="textContent projectName">Calculadora para dividir a conta no bar ou restaurante.</p></a>
           <br>       
           <p class="textContent">Existem porcentagens fixas, mas você também pode inserir a que quiser.</p>
           <br>
-          <p class="textContent">Todos os cálculos são feitos de forma dinâmica, assim que os valores são preenchidos.</p>            
+          <p class="textContent">Todos os cálculos são feitos de forma dinâmica, assim que os valores são preenchidos.</p> 
+          <br>
+          <p class="textContent">Manipulação do DOM com escutadores de eventos e comportamentos condicionados definidos por funções</p>           
         </div>
 
         <div id="imgHolder2" class="cellImg">
@@ -127,6 +132,8 @@
           <a href="https://aurelio-sc.github.io/launch-countdown-timer/" target="_blank"><p class="textContent projectName">Contador regressivo.</p></a>
           <br>
           <p class="textContent">Atualizado a cada segundo.</p>
+          <br>
+          <p class="textContent">Aplicação desenvolvida utilizando Date.parse() e setInterval().</p>
           <br>
           <p class="textContent">Já pode encomendar o presente: o contador termina no meu aniversário!</p>          
         </div>
