--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <br>
           <p class="textContent">Todos os cálculos são feitos de forma dinâmica, assim que os valores são preenchidos.</p> 
           <br>
-          <p class="textContent">Manipulação do DOM com escutadores de eventos e comportamentos condicionados definidos por funções</p>           
+          <p class="textContent">Manipulação do DOM com escutadores de eventos e comportamentos condicionados definidos por funções.</p>           
         </div>
 
         <div id="imgHolder2" class="cellImg">
