--- a/index.html
+++ b/index.html
@@ -35,23 +35,26 @@
     <section class="zone" id="home">
       <div class="halfLeft">
         <p class="textContent">Olá! Eu sou</p>
+        <br>
         <p class="name">Aurélio Soares,</p>
+        <br>
         <p class="textContent">desenvolvedor Front-End.</p>
+        <br>
+        <p class="textContent">Bem-vindo(a) ao meu portifólio.</p>
+        <br>
         <p class="textContent">Conheça um pouco sobre mim</p>
+        <br>
         <p class="textContent">e meu trabalho.</p>
       </div>
       
-      <div class="halfRight">
-       <img class="language" src="./img/html-svgrepo-com.svg">
-       <img class="language" src="./img/css-3-svgrepo-com.svg">
-       <img class="language" src="./img/javascript-svgrepo-com.svg">
+      <div class="halfRight languageContainer">
+       <img class="language" id="html" src="./img/html-svgrepo-com.svg">
+       <img class="language" id="css" src="./img/css-3-svgrepo-com.svg">
+       <img class="language" id="javascript" src="./img/javascript-svgrepo-com.svg">
       </div>
     </section>
 
-    <section class="zone scroll">
-      <p class="textContent" id="scroll">Scroll</p>
-      <div class="verticalLine"></div>
-    </section>
+
 
 
     <section class="zone" id="about">
@@ -65,18 +68,22 @@
           Comecei meus estudos na área em 2021 e no ano seguinte abdiquei de
           outros trabalhos para me dedicar exclusivamente à nova carreira.
         </p>
+        <br>
         <p class="textContent">
           Desenvolvo aplicações responsivas utilizando HTML, CSS e JavaScript.
         </p>
+        <br>
         <p class="textContent">
           Sou graduado em Matemática (licenciatura) e tenho mais de 10 anos
           de experiência como professor. Já dei aula para Ensino Fundamental,
           Médio, cursos preparatórios para concursos e pré-vestibulares.
         </p>
+        <br><br>
         <p class="textContent">
           Acredito no trabalho colaborativo, no compartilhamento de conhecimento
            e no respeito pela diversidade.
         </p>
+        <br>
         <p class="textContent">
           Resido em Santa Teresa (ES) com minha esposa e meus dois filhos.
         </p>
@@ -148,7 +155,7 @@
     </section>    
   </main>
 
-  <footer class="zone footer">
+  <footer class="zone footer" id="footer">
     <p class="textContent createdBy">Construído por Aurélio Soares</p>
     <div class="social">
       <a href="https://github.com/aurelio-sc" target="_blank" class="download socialIcon"><img src="./img/icons8-github.svg" class="iconColor"></a>
